--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,8 +10,8 @@
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
+        android:layout_gravity="center_horizontal|center_vertical"
+        tools:layout_editor_absoluteY="242dp"
+        tools:layout_editor_absoluteX="103dp" />
 
 </android.support.constraint.ConstraintLayout>
