--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,22 +19,32 @@
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
             android:title="Tools" />
+        <item
+            android:id="@+id/editProfile"
+            android:icon="@drawable/com_facebook_profile_picture_blank_portrait"
+            android:title="Edit Profile" />
+        <item
+            android:id="@+id/log_out"
+            android:icon="@drawable/ic_menu_close"
+            android:title="Logout" />
     </group>
-    <item android:title="LogOut">
-        <menu>
-            <!--<item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />-->
-            <item
-                android:id="@+id/log_out"
-                android:icon="@drawable/ic_menu_close"
-                android:title="LogOut" />
-        </menu>
-    </item>
+    <!-- <item android:title="Logout">
+         <menu>
+             <item
+                 android:id="@+id/nav_share"
+                 android:icon="@drawable/ic_menu_share"
+                 android:title="Share" />
+             <item
+                 android:id="@+id/nav_send"
+                 android:icon="@drawable/ic_menu_send"
+                 android:title="Send" />
+
+         </menu>
+     </item>
+     <item android:title="Edit Profile">
+         <menu>
+
+         </menu>
+     </item> -->
 
 </menu>
