--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.raspberry.socialapp.profilePage">
+    tools:context="com.raspberry.socialapp.ui.ProfileActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -16,7 +17,9 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/circle_shape"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
 
@@ -60,11 +63,10 @@
         android:text="Description: This is a description text example for a personal profile in our social app which need to be long enough to show all the information."
         android:textSize="16dp"
         android:textAlignment="center"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/professionView"
-        android:layout_marginRight="0dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/professionView"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/professionView"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
@@ -82,11 +84,9 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/DescriptionView"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/DescriptionView" />
-
-
-
-
+        app:layout_constraintRight_toRightOf="@+id/DescriptionView"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 
 
